@@ -1,3 +1,8 @@
+2004-02-16  Saito <saito2@digitalme.com>
+
+	* timidity/reverb.[ch]:
+	  Implement new reverberation algorithm: Delay and Panning Delay.
+
 2004-02-15  Kentaro Sato <kentaro@ranvis.com>
 
 	* timidity/aiff_a.c: Fixed AIFC sample size field.
